@@ -1,0 +1,10 @@
+	.text
+        .fill 14, 1, 0x90
+	jmp	.LBB1_23
+        .fill 14, 1, 0x90
+	jmp	.LBB1_23
+        .fill 18, 1, 0x90
+	.align	16, 0x90
+        .fill 96, 1, 0x90
+.LBB1_23:
+	nop
